# lapin

.github/workflows/: mayhem.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_class.rs
mayhem/: Dockerfile  parse_class.mayhemfile
